--- a/config/RKR_ImageNet.yml
+++ b/config/RKR_ImageNet.yml
@@ -1,6 +1,6 @@
-conf_name: 'RKR'
+conf_name: 'RKR_ImageNet'
 dataset: 'ImageNet'
-batch_size: 500
+batch_size: 100
 epochs: 150
 
 model:
@@ -9,4 +9,5 @@ model:
   task_num: 10
   class_num: 100
   RG: True
-  SFG: False
+  SFG: True
+  multi_head: True
